syntax = "proto3";

package consignment;

service ShippingService {
    rpc CreateConsignment(Consignment) returns (Response);
    rpc GetConsignment(GetRequest) returns (Response);
}

message Consignment{
    string consignment_id = 1;
    string description = 2;
    int32 weight = 3;
    repeated Container containers = 4;
    string user_id = 5;
}

message Container {
    string container_id = 1;
    string customer_id = 2;
    string user_id = 3;
}

message Response {
    bool created = 1;
    Consignment consignment = 2; //新托运的货物
    repeated Consignment consignments = 3 ; //目前托运的货物

}

message GetRequest {
}

