syntax = "proto3";
package vessel;

service VesselService {
    rpc FindAvailableVessel(Specification) returns (Response);
}

message Vessel{
    string vessel_id = 1;
    int32 capacity = 2;
    int32 max_weight = 3;
    string name = 4;
    bool available = 5;
    string owner_id = 6;
}

message Specification {
    int32 capacity = 1;
    int32 max_weight = 2;
    string user_id = 3;
    string description = 6;
}

message Response {
    Vessel vessel = 1;
    repeated  Vessel vessels = 2;
}
